tests/ui/parser/macro/expr-in-attribute.stderr
error: expected a literal (`1u8`, `1.0f32`, `"string"`, etc.) here, found expression
  --> $DIR/expr-in-attribute.rs:4:21
   |
LL | #[deprecated(note = a!=b)]
   |                     ^^^^ expressions are not allowed here

error: aborting due to 1 previous error

